# greatwall_memory_trading_libs

./: .gitattributes  .gitignore  CMakeLists-template-linux.txt  CMakeLists-template-win32.txt  CMakeLists.txt  Readme.md
CMake/: PrecompiledHeader.cmake  cotire.cmake
config/: on_time_trading_config.json.template
examples/: CMakeLists.txt
examples/export_positions/: CMakeLists.txt  strategy.cpp  strategy.h  strategy_app.cpp
examples/on_time_trading/: CMakeLists.txt  strategy.cpp  strategy.h  strategy_app.cpp
include/biz/position/: PosCache.h
include/cli/: cli.h
include/customapi/: datastruct.h
include/cwrapper/: greatwall.h
include/framework/application/: great_wall_app.h  service.h
include/framework/common/: data_struct.h  data_type.h  logger.h  stats.h
include/framework/market/: filter_context.h  market.h  mkt_handler.h  mkt_plugin-inl.h  mkt_plugin.h
include/framework/message/: package.h
include/framework/router/: channel_spi.h  parser.h  trade_engine_base.h
include/framework/science/: mathexpr.h
include/framework/server/: strategy_manager.h
include/framework/strategy/: context.h  instance-inl.h  instance.h  rc_base.h  strat_engine.h
include/framework/time/: clock_util.h
include/framework/trade/: channel.h  executor.h  order_exec.h  transaction.h  transaction_prop.h
include/oos/: ORDataStruct.h  ORDataType.h  OpenOrderApi.h  pre.h
include/orchid/access_log/: access_log.h
include/orchid/api/: api.h  io_error.h  os_sys_calls.h  os_sys_calls_common.h  os_sys_calls_hot_restart.h  os_sys_calls_linux.h
include/orchid/buffer/: buffer.h
include/orchid/common/: IniReader.h  assert.h  callback.h  common.h  const_singleton.h  exception.h  interval_set.h  logger.h  macros.h  mutex_tracer.h  non_copyable.h  options.h  platform.h  pure.h  registry.h  scope_tracker.h  singleton.h  singleton_manager.h  stack_array.h  stl_helpers.h  threadsafe_singleton.h  time.h  utility.h  version.h  version_number.h
include/orchid/container/: delay_queue.h
include/orchid/dataflow/: FileFlow.h  FlatFlow.h  Flow.h  FlowReader.h  MemoryFileFlow.h  MemoryFlow.h  MemoryQueueFlow.h  ShrinkFlow.h
include/orchid/eadb/: eadb.h
include/orchid/event/: deferred_deletable.h  dispatcher.h  file_event.h  signal.h  timer.h
include/orchid/filesystem/: filesystem.h  watcher.h
include/orchid/grpc/: async_client.h  async_client_manager.h  context.h  google_grpc_creds.h  status.h
include/orchid/influxdb/: InfluxDBClient.h  Point.h
include/orchid/init/: manager.h  target.h  watcher.h
include/orchid/json/: config_schemas.h  json_loader.h  json_object.h
include/orchid/memory/: data_store.h
include/orchid/message/: Package.h
include/orchid/network/: EventHandler.h  Reactor.h  SocketInit.h  listener.h
include/orchid/registry/: registry.h
include/orchid/runtime/: runtime.h
include/orchid/server/: configuration.h  guarddog.h  hot_restart.h  instance.h  lifecycle_notifier.h  listener_manager.h  options.h  process_context.h  watchdog.h  worker.h
include/orchid/session/: ClientApi.h
include/orchid/singleton/: instance.h  manager.h
include/orchid/thread/: thread.h
include/orchid/thread_local/: thread_local.h
include/ort/: OrderCache.h  libor.h  logger.h  pre.h
include/ort_ext/: Readme.md
include/ort_ext/core/: AdapterBase.h  AdapterCache.h  OrderRouterExtApi.h  PackageHelper.h
include/ort_ext/message/: ORTypeDefs.h  OrtPackage.h
include/ort_ext/utility/: FlowWorker.h  cutsom_cli.h
scripts/: linux.sh  vs2019.bat  vsInstall.bat  x64_2019.bat
source/pch/: compat.h  compat_impl.cc  compat_time.cc  compat_time.h
